:package: Migrate to Discord.js v14 API and replace vm2 with isolated-vm
Updates deprecated Discord.js APIs for v14 compatibility:
- Replace `guild.ownerID` with `guild.ownerId`
- Update channel/role/member access to use `.cache` collections
- Remove deprecated voice region API from guild info command
- Add null check for member presence data
- Update `Permissions` to `PermissionsBitField` and `PermissionFlagsBits`
- Fix avatar URL generation to use hardcoded CDN URL
- Update message cache cleanup

--- a/Web/public/css/custom.css
+++ b/Web/public/css/custom.css
@@ -105,6 +105,17 @@ html, body {
 .navbar {
     box-shadow: none;
 }
+/* Navbar text colors for transparent navbar on colored hero background */
+.navbar.is-transparent .navbar-item,
+.navbar.is-transparent .navbar-link,
+.navbar.is-transparent .navbar-brand .navbar-item {
+    color: white !important;
+}
+.navbar.is-transparent .navbar-item:hover,
+.navbar.is-transparent .navbar-link:hover {
+    color: #14b8a6 !important;
+    background-color: transparent !important;
+}
 .navbar-item.is-active {
     background-color: transparent !important;
 }
