--- a/Web/views/partials/header.ejs
+++ b/Web/views/partials/header.ejs
@@ -16,10 +16,10 @@
 
             <div id="navbar-menu" class="navbar-menu">
                 <div class="navbar-end">
-                <a class="navbar-item is-active" href="https://status.skynetbot.com" title="Status">
-                  <span class="icon is-small">
-                    <i class="fa fa-check"></i>
-                  </span>
+                <a id="nav-status" class="navbar-item is-active" href="/status" title="Status">
+                    <span class="icon is-small">
+                        <i class="fa fa-heartbeat"></i>
+                    </span>
                     &nbsp;
                     <span>Status</span>
                 </a>
