--- a/Web/views/pages/admin-tags.ejs
+++ b/Web/views/pages/admin-tags.ejs
@@ -65,7 +65,7 @@
 						</h4>
 						<div class="command-items">
 						<% const commandData = configData.commands.tag; commandData.name = "tag"; commandData.description = pageData.commandDescriptions.tag; commandData.category = pageData.commandCategories.tag; %>
-						<%- include('../partials/admin-command-item') %>
+						<%- include('../partials/admin-command-item', { commandData: commandData, pageData: pageData }) %>
 						</div>
 							<div class="field tag-options<%= commandData.isEnabled ? '' : ' is-hidden' %>">
 								<div class="field">
